fixes z-index issue with ink-js gallery component

--- a/ink/less/widgets.less
+++ b/ink/less/widgets.less
@@ -8,6 +8,7 @@
 	width:100%;
 	text-align:center;
 	position:absolute; bottom:0;
+	z-index:10;
 }
 
 .ink-gallery .pagination a {
